src/test/deca/syntax/valid/plus_intvar_cmp_plus_int.deca
// Description :
//
//      Test syntaxiquement correct de la somme d'une comparaison et d'un int dans une variable int
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y=  (2<3)+3;
}