src/test/deca/syntax/invalid/readany/blt_void_blt_readint.deca
// Description :
//
//      Test syntaxiquement incorrect de : < readInt()
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{ 
    boolean y = < readInt() ; 
}